# xag_xhome

./: Makefile  canConfig.sh
WriteLog/: Makefile  WriteLog  WriteLog.c  WriteLog.h
WriteLog/COMMON/: Makefile  memb.c
WriteLog/LIST/: Makefile  list.c
WriteLog/etc/: Config.ini
base64/: Makefile  base64.cc
communication/: createbuild.sh
communication/can_driver/: CMakeLists.txt  Makefile  a.out  can_com.h  canbus_socket.cc  canbus_socket.h
communication/can_driver/cmake/: build_for_imx8m.cmake  launch_build.cmake
communication/interface/: Makefile  interface.cc  interface.h  interface_info.h  interface_public.h
communication/message/: Makefile  message.cc  message.h  msg_info.h  msg_public.h
communication/spdlog/: common.h  logger.h  spdlog.h
communication/spdlog/details/: registry-inl.h
communication/spdlog/fmt/: fmt.h
communication/usr/: Makefile  superx4_SAB.cc  superx4_SAB.h
dockhandle/: Makefile  dockCanHandle.cc  dockhandle.cc
hdls/: Makefile  hdls.cc  unicverlog.cc
include/: WriteLog.h  base64.h  dockCanHandle.h  dockhandle.h  hdls.h  list.h  loguser.h  memb.h  tps.h  unicverlog.h  xap.h  xhome.h  xhome.pb.h  xiot.h
sh/: S90dock  readme.txt
tps/: Makefile  tps.cc
usr/: Makefile  dock_main.cc  xag_xhome
xhome/: Makefile  xhome.cc  xhome.pb.cc
